# statsmodels-sgd

./: CLAUDE.md  IMPROVEMENTS_SUMMARY.md  JOURNAL_TARGETS.md  REFEREE_REPORTS_SIMULATION.md  REPLICATION_REPORT.md  paper.md  pyproject.toml
docs/: _config.yml  _toc.yml  intro.md  myst.yml  references.bib
docs/chapters/: background.md  related_work.md
docs/simulations/: privacy_utility.ipynb
statsmodels_sgd/: api.py  base_model.py  tools.py
statsmodels_sgd/privacy/: __init__.py  accounting.py  mechanisms.py
statsmodels_sgd/regression/: discrete_model.py  linear_model.py  logit_dp.py
statsmodels_sgd/tests/: test_ols.py
tests/: test_confidence_intervals.py  test_logit_dp.py  test_se_calibration.py
tests/privacy/: test_privacy_accounting.py
